--- a/CbkTask/Controller/Home/View/Home.storyboard
+++ b/CbkTask/Controller/Home/View/Home.storyboard
@@ -4,45 +4,77 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--HomeVC-->
-        <scene sceneID="s0d-6b-0kx">
+        <scene sceneID="uP7-a0-qeD">
             <objects>
-                <viewController restorationIdentifier="HomeVC" storyboardIdentifier="HomeVC" id="Y6W-OH-hqX" customClass="HomeVC" customModule="CbkTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <viewController storyboardIdentifier="HomeVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="afh-9X-9sT" customClass="HomeVC" customModule="CbkTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Ya-CG-nJo">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEV-c0-thg">
-                                <rect key="frame" x="345" y="770" width="32" height="32"/>
+                                <rect key="frame" x="345" y="804" width="32" height="32"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ic_add"/>
-                                <connections>
-                                    <action selector="btnAddTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="tDU-Zh-qkT"/>
-                                </connections>
                             </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="Irg-ux-ITe"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="gEV-c0-thg" secondAttribute="bottom" constant="16" id="4l9-ei-rS1"/>
-                            <constraint firstAttribute="trailing" secondItem="gEV-c0-thg" secondAttribute="trailing" constant="16" id="FOB-2h-Wg2"/>
+                            <constraint firstAttribute="trailing" secondItem="gEV-c0-thg" secondAttribute="trailing" constant="16" id="DRU-c9-UZ8"/>
+                            <constraint firstAttribute="bottom" secondItem="gEV-c0-thg" secondAttribute="bottom" constant="16" id="Pib-ZG-cIh"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="yQt-Bd-zDc">
+                        <nil key="title"/>
+                        <leftBarButtonItems>
+                            <barButtonItem image="gearshape" catalog="system" id="YZg-GT-8i5">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="logoutTapped:" destination="afh-9X-9sT" id="ilr-Xa-Ck3"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem style="plain" id="d20-63-6Vf">
+                                <view key="customView" contentMode="scaleToFill" id="ahN-Qr-PQZ">
+                                    <rect key="frame" x="62" y="5.6666666666666679" width="150" height="33"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xO-yd-6Xr">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="33"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="4xO-yd-6Xr" secondAttribute="bottom" id="8yc-uD-PeG"/>
+                                        <constraint firstAttribute="trailing" secondItem="4xO-yd-6Xr" secondAttribute="trailing" id="LWD-4a-j5i"/>
+                                        <constraint firstItem="4xO-yd-6Xr" firstAttribute="top" secondItem="ahN-Qr-PQZ" secondAttribute="top" id="kOF-bx-p3G"/>
+                                        <constraint firstItem="4xO-yd-6Xr" firstAttribute="leading" secondItem="ahN-Qr-PQZ" secondAttribute="leading" id="vwb-Dg-dTS"/>
+                                    </constraints>
+                                </view>
+                                <color key="tintColor" name="red"/>
+                            </barButtonItem>
+                        </leftBarButtonItems>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cQO-II-7qh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139.69465648854961" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="1109" y="-2"/>
         </scene>
     </scenes>
     <resources>
+        <image name="gearshape" catalog="system" width="128" height="123"/>
         <image name="ic_add" width="32" height="32"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="red">
+            <color red="1" green="0.22400000691413879" blue="0.22400000691413879" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
