--- a/CbkTask/Controller/Home/View/Home.storyboard
+++ b/CbkTask/Controller/Home/View/Home.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,22 +18,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEV-c0-thg">
-                                <rect key="frame" x="345" y="804" width="32" height="32"/>
+                                <rect key="frame" x="345" y="770" width="32" height="32"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ic_add"/>
+                                <connections>
+                                    <action selector="btnAddTapped:" destination="afh-9X-9sT" eventType="touchUpInside" id="Ed9-LN-RwF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Irg-ux-ITe"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="gEV-c0-thg" secondAttribute="trailing" constant="16" id="DRU-c9-UZ8"/>
-                            <constraint firstAttribute="bottom" secondItem="gEV-c0-thg" secondAttribute="bottom" constant="16" id="Pib-ZG-cIh"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="gEV-c0-thg" secondAttribute="bottom" constant="16" id="mFB-aX-7d9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yQt-Bd-zDc">
                         <nil key="title"/>
                         <leftBarButtonItems>
-                            <barButtonItem image="gearshape" catalog="system" id="YZg-GT-8i5">
+                            <barButtonItem image="ic_logout" id="YZg-GT-8i5">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="logoutTapped:" destination="afh-9X-9sT" id="ilr-Xa-Ck3"/>
@@ -41,7 +44,7 @@
                             </barButtonItem>
                             <barButtonItem style="plain" id="d20-63-6Vf">
                                 <view key="customView" contentMode="scaleToFill" id="ahN-Qr-PQZ">
-                                    <rect key="frame" x="62" y="5.6666666666666679" width="150" height="33"/>
+                                    <rect key="frame" x="67" y="5.6666666666666679" width="150" height="33"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xO-yd-6Xr">
@@ -62,6 +65,12 @@
                                 <color key="tintColor" name="red"/>
                             </barButtonItem>
                         </leftBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" image="person.crop.circle" catalog="system" id="0dl-pV-bR2">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="btnProfileTappped:" destination="afh-9X-9sT" id="eUb-Ms-hbn"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
@@ -71,8 +80,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="gearshape" catalog="system" width="128" height="123"/>
         <image name="ic_add" width="32" height="32"/>
+        <image name="ic_logout" width="32" height="32"/>
+        <image name="person.crop.circle" catalog="system" width="128" height="123"/>
         <namedColor name="red">
             <color red="1" green="0.22400000691413879" blue="0.22400000691413879" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
