--- a/CbkTask/Controller/Home/View/Home.storyboard
+++ b/CbkTask/Controller/Home/View/Home.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,20 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEV-c0-thg">
-                                <rect key="frame" x="345" y="770" width="32" height="32"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Oxt-84-evM">
+                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="afh-9X-9sT" id="hqI-Hz-Skt"/>
+                                    <outlet property="delegate" destination="afh-9X-9sT" id="ax6-T9-cD3"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Y8-xK-8ew">
+                                <rect key="frame" x="331" y="800" width="32" height="32"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ic_add"/>
                                 <connections>
-                                    <action selector="btnAddTapped:" destination="afh-9X-9sT" eventType="touchUpInside" id="Ed9-LN-RwF"/>
+                                    <action selector="btnAddPostTapped:" destination="afh-9X-9sT" eventType="touchUpInside" id="YqV-jW-Den"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Irg-ux-ITe"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="gEV-c0-thg" secondAttribute="trailing" constant="16" id="DRU-c9-UZ8"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="gEV-c0-thg" secondAttribute="bottom" constant="16" id="mFB-aX-7d9"/>
+                            <constraint firstAttribute="trailing" secondItem="Oxt-84-evM" secondAttribute="trailing" id="DIR-r7-iyJ"/>
+                            <constraint firstAttribute="trailing" secondItem="9Y8-xK-8ew" secondAttribute="trailing" constant="30" id="Lp8-5E-7Je"/>
+                            <constraint firstItem="Oxt-84-evM" firstAttribute="leading" secondItem="9Ya-CG-nJo" secondAttribute="leading" id="bGM-2E-j3C"/>
+                            <constraint firstAttribute="bottom" secondItem="9Y8-xK-8ew" secondAttribute="bottom" constant="20" id="eE8-6U-eFS"/>
+                            <constraint firstAttribute="bottom" secondItem="Oxt-84-evM" secondAttribute="bottom" id="kXS-ko-AXe"/>
+                            <constraint firstItem="Oxt-84-evM" firstAttribute="top" secondItem="Irg-ux-ITe" secondAttribute="top" id="tNE-w5-fth"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yQt-Bd-zDc">
@@ -73,18 +86,106 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tblPost" destination="Oxt-84-evM" id="y8Z-zs-nmS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cQO-II-7qh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1109" y="-2"/>
         </scene>
+        <!--Create PostVC-->
+        <scene sceneID="9pH-Pi-PVT">
+            <objects>
+                <viewController storyboardIdentifier="CreatePostVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="A0X-IT-OGt" customClass="CreatePostVC" customModule="CbkTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MZ8-oO-9he">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BNH-Bk-rON">
+                                <rect key="frame" x="16" y="397" width="361" height="50"/>
+                                <color key="backgroundColor" name="darkGreen"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="anV-6U-hKp"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Create"/>
+                                <connections>
+                                    <action selector="btncreateTaped:" destination="A0X-IT-OGt" eventType="touchUpInside" id="xPL-IX-rYg"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="1r6-Y3-I5i">
+                                <rect key="frame" x="16" y="153" width="361" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="7E7-e3-dJn"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DKq-KP-avw">
+                                <rect key="frame" x="329" y="261" width="32" height="32"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="ic_add"/>
+                                <connections>
+                                    <action selector="btnAddPhotoTapped:" destination="A0X-IT-OGt" eventType="touchUpInside" id="Km6-s1-hMi"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p0W-lU-cMt">
+                                <rect key="frame" x="16" y="333" width="361" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRZ-zq-CIw">
+                                <rect key="frame" x="172.66666666666666" y="487" width="48" height="30"/>
+                                <color key="tintColor" name="darkGreen"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="btnDismisTapped:" destination="A0X-IT-OGt" eventType="touchUpInside" id="1Ja-wS-m87"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="geR-9m-Rby"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BNH-Bk-rON" firstAttribute="leading" secondItem="MZ8-oO-9he" secondAttribute="leading" constant="16" id="9ML-Kq-smk"/>
+                            <constraint firstItem="p0W-lU-cMt" firstAttribute="top" secondItem="1r6-Y3-I5i" secondAttribute="bottom" constant="30" id="G08-8e-hxL"/>
+                            <constraint firstItem="DKq-KP-avw" firstAttribute="bottom" secondItem="1r6-Y3-I5i" secondAttribute="bottom" constant="-10" id="Gdk-rW-VCc"/>
+                            <constraint firstAttribute="trailing" secondItem="p0W-lU-cMt" secondAttribute="trailing" constant="16" id="MTu-uC-AOa"/>
+                            <constraint firstItem="bRZ-zq-CIw" firstAttribute="centerX" secondItem="geR-9m-Rby" secondAttribute="centerX" id="PVo-A0-dfs"/>
+                            <constraint firstItem="geR-9m-Rby" firstAttribute="trailing" secondItem="1r6-Y3-I5i" secondAttribute="trailing" constant="16" id="UBw-fo-aaL"/>
+                            <constraint firstItem="1r6-Y3-I5i" firstAttribute="leading" secondItem="geR-9m-Rby" secondAttribute="leading" constant="16" id="aiV-aA-G2d"/>
+                            <constraint firstItem="geR-9m-Rby" firstAttribute="trailing" secondItem="DKq-KP-avw" secondAttribute="trailing" constant="32" id="oq1-aN-I4E"/>
+                            <constraint firstAttribute="trailing" secondItem="BNH-Bk-rON" secondAttribute="trailing" constant="16" id="rKU-cb-bLe"/>
+                            <constraint firstItem="BNH-Bk-rON" firstAttribute="top" secondItem="p0W-lU-cMt" secondAttribute="bottom" constant="30" id="rdV-NM-P8U"/>
+                            <constraint firstItem="bRZ-zq-CIw" firstAttribute="top" secondItem="BNH-Bk-rON" secondAttribute="bottom" constant="40" id="v2W-Dk-Or4"/>
+                            <constraint firstItem="p0W-lU-cMt" firstAttribute="leading" secondItem="MZ8-oO-9he" secondAttribute="leading" constant="16" id="vqM-TV-BMo"/>
+                            <constraint firstItem="1r6-Y3-I5i" firstAttribute="top" secondItem="geR-9m-Rby" secondAttribute="top" constant="50" id="zEb-NK-QHD"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="imgCreate" destination="1r6-Y3-I5i" id="W2A-sh-c8K"/>
+                        <outlet property="txtTitle" destination="p0W-lU-cMt" id="Aba-WC-VZJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NUl-BH-K4U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1107.6335877862596" y="-2.1126760563380285"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ic_add" width="32" height="32"/>
         <image name="ic_logout" width="32" height="32"/>
+        <image name="ic_placeholder" width="526" height="360"/>
         <image name="person.crop.circle" catalog="system" width="128" height="123"/>
+        <namedColor name="darkGreen">
+            <color red="0.0080000003799796104" green="0.18799999356269836" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="red">
             <color red="1" green="0.22400000691413879" blue="0.22400000691413879" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
